refactor: rename local trust -> trust matrix at schema level
